$Id$


OpenDNSSEC 2.0.0-trunk


OpenDNSSEC 1.4.0 - 2013-04-22

* Production release of 1.4
* Versioning scheme and release support policies updated
* Summary of changes in 1.4 can be found on the wiki:
  http://wiki.opendnssec.org/display/DOCS


OpenDNSSEC 1.4.0rc3 - 2013-03-15

* Further testing of OPENDNSSEC-387 completed, release returned to rc status.


OpenDNSSEC 1.4.0b3 - 2013-02-20

Note: This release is marked as a beta release (rather than rc3) due to 
OPENDNSSEC-387, which is a significant functional change compared to rc2. 

* OPENDNSSEC-387: Rollback of multi-threaded enforcer. Due to key allocation 
  issues the usefulness of the threaded enforcer is outweighed by the code
  complications. The option still remains in conf.xml for compatibility with
  existing use; but it will now be silently ignored.

Bugfixes:
* OPENDNSSEC-388: Signer Engine: Internal serial should take into account
  the inbound serial.
* SUPPORT-50/51: Signer Engine: Inbound DNS Adapter incorrectly updates 
  NSEC3PARAM and DNSKEY RRset [OPENDNSSEC-389]
* OPENDNSSEC-389: Input DNS Adapter incorrectly updating NSEC3PARAM and DNSKEY RRsets


OpenDNSSEC 1.4.0rc2 - 2013-01-25

* OPENDNSSEC-350: Signer Engine: Better log message when IXFR is not ready for
  reading.
* OPENDNSSEC-367: ods-ksmutil: Require user confirmation if the algorithm for
  a key is changed in a policy (as this rollover is not handled cleanly)

Bugfixes:
* SUPPORT-44: Signer Engine: Drop privileges after binding to socket
  [OPENDNSSEC-364].
* Signer Engine: XFR not ready should not be a fatal status for task read
  (thanks Ville Mattila).
* OPENDNSSEC-365: Enforcer: Nasty bug where KSKs could get prematurely retired.


OpenDNSSEC 1.4.0rc1 - 2013-01-10

* OPENDNSSEC-359: Remove eppclient


OpenDNSSEC 1.4.0b2 - 2012-12-17

* OPENDNSSEC-292: Provide scripts to convert database between different 
  supported formats
* OPENDNSSEC-299: ods-ksmutil: ods-ksmutil <enter> now includes policy import