@@ -1,3 +1,6 @@
+22 April 2013: Matthijs
+- OPENDNSSEC-247: TTL NSEC3 was not updated on SOA Minimum change.
+
 15 February 2013: Matthijs
 - Coverity report
 
